WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138144
[Cocoa] REGERESSION (
r171801
): Client certificate authentication is failing
https://bugs.webkit.org/show_bug.cgi?id=138144
Summary
[Cocoa] REGERESSION (r171801): Client certificate authentication is failing
mitz
Reported
2014-10-28 12:51:23 PDT
<
http://trac.webkit.org/r171801
> broke client certificate authentication, because NSURLCredential doesn’t serialize identities properly. Patch forthcoming.
Attachments
Encode the individual pieces of identity-based credentials separately
(3.53 KB, patch)
2014-10-28 12:57 PDT
,
mitz
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-10-28 12:57:52 PDT
Created
attachment 240564
[details]
Encode the individual pieces of identity-based credentials separately
Alexey Proskuryakov
Comment 2
2014-10-28 13:00:23 PDT
Comment on
attachment 240564
[details]
Encode the individual pieces of identity-based credentials separately View in context:
https://bugs.webkit.org/attachment.cgi?id=240564&action=review
> Source/WebKit2/Shared/mac/WebCoreArgumentCodersMac.mm:286 > + // NSURLCredential doesn't serialize identities correctly, so we encode the pieces individually in the identity case.
Is there a bug tracking a fix for this incorrectness?
mitz
Comment 3
2014-10-28 13:01:57 PDT
Fixed in <
http://trac.webkit.org/r175270
>.
mitz
Comment 4
2014-10-28 13:03:38 PDT
(In reply to
comment #2
)
> Comment on
attachment 240564
[details]
> Encode the individual pieces of identity-based credentials separately > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=240564&action=review
> > > Source/WebKit2/Shared/mac/WebCoreArgumentCodersMac.mm:286 > > + // NSURLCredential doesn't serialize identities correctly, so we encode the pieces individually in the identity case. > > Is there a bug tracking a fix for this incorrectness?
I don’t know. If there is, it will be in Radar, not in bugs.webkit.org.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug