[Cocoa] REGERESSION (r171801): Client certificate authentication is failing https://bugs.webkit.org/show_bug.cgi?id=138144

Reviewed by Alexey Proskuryakov.

NSURLCredential’s implementation of NSSecureCoding fails to encode identity-based
credentials properly. Work around that by encoding the identity, certificate, and
persistence individually.

* Shared/mac/WebCoreArgumentCodersMac.mm:
(IPC::ArgumentCoder<Credential>::encodePlatformData):
(IPC::ArgumentCoder<Credential>::decodePlatformData):



Canonical link: https://commits.webkit.org/155996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175270 268f45cc-cd09-0410-ab3c-d52691b4dbfc